--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bulma": "^0.9.4",
+    "device-uuid": "^1.0.4",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-detect-offline": "^2.4.5",
