--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
     "sequelize": "^6.25.3"
   },
   "devDependencies": {
